Basic edit mechanism

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 title: Live A Hero Wiki
 url: https://liveahero-wiki.github.io/
+github_edit: https://github.com/liveahero-wiki/liveahero-wiki.github.io/edit/master
 permalink: /news/:year/:month/:title/
 markdown: kramdown
+kramdown:
+  parse_block_html: true
 sass:
   style: compressed
 plugins:
