--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,10 @@ defaults:
       type: "heroes"
     values:
       layout: heroes
+  - scope:
+      path: "assets/img/hero_sprites"
+    values:
+      hero_sprites: true
 
 collections:
   heroes:
