--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Live A Hero Wiki
-url: https://liveahero-wiki.github.io/
+url: https://liveahero-wiki.github.io
 github_edit: https://github.com/liveahero-wiki/liveahero-wiki.github.io/edit/master
 permalink: /news/:year/:month/:title/
 markdown: kramdown
