Jekyll config update

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ url: https://liveahero-wiki.github.io
 github_edit: https://github.com/liveahero-wiki/liveahero-wiki.github.io/edit/master
 permalink: /news/:year/:month/:title/
 markdown: kramdown
-kramdown:
-  parse_block_html: true
+#kramdown:
+#  parse_block_html: true
 sass:
   style: compressed
 plugins:
@@ -16,10 +16,10 @@ defaults:
       path: ""
     values:
       layout: default
-  - scope:
-      type: "heroes"
-    values:
-      layout: heroes
+#  - scope:
+#      type: "heroes"
+#    values:
+#      layout: heroes
   - scope:
       path: "assets/img/hero_sprites"
     values:
