Mass rename heroes to charas

--- a/_config.yml
+++ b/_config.yml
@@ -17,15 +17,14 @@ defaults:
     values:
       layout: default
 #  - scope:
-#      type: "heroes"
+#      type: "charas"
 #    values:
-#      layout: heroes
+#      layout: charas
   - scope:
       path: "assets/img/hero_sprites"
     values:
       hero_sprites: true
 
 collections:
-  heroes:
+  charas:
     output: true
-    permalink: /:collection/:path/
