--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -4,3 +4,78 @@
 1002102: Best Direction
 1002103: Megaton Crusher
 1002104: Megaton Crusher+
+# Crowne
+1005101: Machine Crack
+1005102: Arms Repairment
+1005103: Analysis & Scrap 
+1005104: Analysis & Scrap+
+# Gorou
+1023101: Drunk Carpenter
+1023102: Scaffolding
+1023103: High-end Construct
+1023104: Drunk Carpenter+
+# Kirsch
+1028101: Merengue Making
+1028102: Sweets Factory
+1028103: Hopping Tornado
+1028104: Sweets Factory+
+# Kouki & Sirius
+1018101: Appeal Chance
+1018102: Special Service
+1018103: Prime-time Emperor
+1018104: Special Service+
+# Marfik
+1014101: Hunting Spirit
+1014102: Survivor Soul
+1014103: Ruins Salvage
+1014104: Survivor Soul+
+# Narihito
+1029101: Millenium Feast
+1029102: Full-range Smasher
+1029103: Memorial Heroes
+1028104: Millenium Feast+
+# Polaris Mask
+1015101: Glittering Stars Back-Breaker
+1015102: Mic Performance
+1015103: Polaris Buster!! 
+1015104: Polaris Buster!!+
+# Procy
+1032101: Money is Time
+1032102: Gold Rush Hour
+1032103: Big Hammer Cornucopia
+1032104: Big Hammer Cornucopia+
+# Rakta
+1020101: Focus Remover
+1020102: Development Arrest
+1020103: Greatest Operation
+1020104: Development Arrest+
+# Ryekie
+1004101: Kilobolt Slug
+1004102: Megabolt Crash
+1004103: Gigabolt Breaker
+1004104: Gigabolt Breaker+
+# Victom
+1009101: Hyper Rescue
+1009102: Desperado Mind
+1009103: Lightspeed Phoenix
+1009104: Lightspeed Phoenix+
+# Digram
+1024101: Departure Procedure
+1024102: Energy Replenishing
+1024103: Out of White Line
+1024104: Energy Replenishing+
+# Furlong
+1008101: Spalare Aqua
+1008102: Liquiesta Sport
+1008103: Manguera de Aquario
+1008104: Spalare Aqua+
+# Alchiba 
+1026101: Pista Epidiosi
+1026102: Vasanisterio
+1026103: Mavro Aspiro
+1026104: Vasanisterio+
+# Toushuu
+1013101: Iai of Decapitation
+1013102: Great Comet Decapitation
+1013103: Lion Warrior Sword Dance
+1013104: Iai of Decapitation+
