Added Akashi Tamamura

--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1,4 +1,9 @@
 # Keep this sorted by skill id
+# Akashi Tamamura
+1001101: Burning White Ball
+1001102: Fighting Spirit of the Ball Child
+1001103: Bailie
+1001104: Fighting Spirit of the Ball Child+
 # Mokdai
 1002101: Herculean Punch 
 1002102: Best Direction
