--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -3,7 +3,7 @@
 1002101: Herculean Punch 
 1002102: Best Direction
 1002103: Megaton Crusher
-1002104: Megaton Crusher+
+1002104: Best Direction+
 # Crowne
 1005101: Machine Crack
 1005102: Arms Repairment
