--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -4,6 +4,15 @@
 1002102: Best Direction
 1002103: Megaton Crusher
 1002104: Best Direction+
+2002101: Impressive Direction
+2002102: Impressive Direction+
+2002103: Impressive Direction++
+3002101: Skillful Camera Work I
+3002102: Skillful Camera Work II
+3002103: Skillful Camera Work III
+3002104: Skillful Camera Work IV
+3002105: Skillful Camera Work V
+3002106: Skillful Camera Work VI
 # Crowne
 1005101: Machine Crack
 1005102: Arms Repairment
@@ -54,6 +63,15 @@
 1004102: Megabolt Crash
 1004103: Gigabolt Breaker
 1004104: Gigabolt Breaker+
+2004101: Thunderbolt of Justice
+2004102: Thunderbolt of Justice+
+2004103: Thunderbolt of Justice++
+3004101: Call My Name I
+3004102: Call My Name II
+3004103: Call My Name III
+3004104: Call My Name IV
+3004105: Call My Name V
+3004106: Call My Name VI
 # Victom
 1009101: Hyper Rescue
 1009102: Desperado Mind
@@ -79,3 +97,17 @@
 1013102: Great Comet Decapitation
 1013103: Lion Warrior Sword Dance
 1013104: Iai of Decapitation+
+# Loren
+1021101: Sorry If This Hurts
+1021102: I'll Treat You now
+1021103: Bring Your Smile
+1021104: I'll Treat You now+
+2021101: First-Aid Treatment
+2021102: First-Aid Treatment+
+2021103: First-Aid Treatment++
+3021101: Angel on The Battlefield I
+3021102: Angel on The Battlefield II
+3021103: Angel on The Battlefield III
+3021104: Angel on The Battlefield IV
+3021105: Angel on The Battlefield V
+3021106: Angel on The Battlefield VI
