Move fg sprites to submodule

--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ defaults:
 #    values:
 #      layout: charas
   - scope:
-      path: "assets/img/hero_sprites"
+      path: "assets/img/fg"
     values:
-      hero_sprites: true
+      fg: true
 
 collections:
   charas:
