Add unreleased units

--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ defaults:
       path: ""
     values:
       layout: default
-#  - scope:
-#      type: "charas"
-#    values:
-#      layout: charas
+  - scope:
+      type: "charas"
+    values:
+      unreleased: false
   - scope:
       path: "assets/img/fg"
     values:
