--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -4,6 +4,15 @@
 1001102: Fighting Spirit of the Ball Child
 1001103: Bailie
 1001104: Fighting Spirit of the Ball Child+
+2001101: Singular Focus
+2001102: Singular Focus+
+2001103: Singular Focus++
+3001101: Competitive Spirit I
+3001101: Competitive Spirit II
+3001101: Competitive Spirit III
+3001101: Competitive Spirit IV
+3001101: Competitive Spirit V
+3001101: Competitive Spirit VI
 # Mokdai
 1002101: Herculean Punch 
 1002102: Best Direction
@@ -23,11 +32,29 @@
 1005102: Arms Repairment
 1005103: Analysis & Scrap 
 1005104: Analysis & Scrap+
+2005101: Instant Armor
+2005102: Instant Armor+
+2005103: Instant Armor++
+3005101: Custom Suit I
+3005102: Custom Suit II
+3005103: Custom Suit III
+3005104: Custom Suit IV
+3005105: Custom Suit V
+3005106: Custom Suit VI
 # Gorou
 1023101: Drunk Carpenter
 1023102: Scaffolding
 1023103: High-end Construct
 1023104: Drunk Carpenter+
+2023101: Quick Fix Bulwark
+2023102: Quick Fix Bulwark+
+2023103: Quick Fix Bulwark++
+3023101: Carpenter's Tricks I
+3023102: Carpenter's Tricks II
+3023103: Carpenter's Tricks III
+3023104: Carpenter's Tricks IV
+3023105: Carpenter's Tricks V
+3023106: Carpenter's Tricks VI
 # Kirsch
 1028101: Merengue Making
 1028102: Sweets Factory
@@ -87,16 +114,40 @@
 1024102: Energy Replenishing
 1024103: Out of White Line
 1024104: Energy Replenishing+
+2024101: Restraint Release
+2024102: Restraint Release+
+2024103: Restraint Release++
+3024101: Strategy Modification I
+3024102: Strategy Modification II
+3024103: Strategy Modification III
+3024104: Strategy Modification IV
+3024105: Strategy Modification V
+3024106: Strategy Modification VI
 # Furlong
 1008101: Spalare Aqua
 1008102: Liquiesta Sport
 1008103: Manguera de Aquario
 1008104: Spalare Aqua+
+3008101: High-Temperature Constitution I
+3008102: High-Temperature Constitution II
+3008103: High-Temperature Constitution III
+3008104: High-Temperature Constitution IV
+3008105: High-Temperature Constitution V
+3008106: High-Temperature Constitution VI
 # Alchiba 
 1026101: Pista Epidiosi
 1026102: Vasanisterio
 1026103: Mavro Aspiro
 1026104: Vasanisterio+
+2021601: Behavioral Inference
+2021602: Behavioral Inference+
+2021603: Behavioral Inference++
+3026101: Situational Awareness I
+3026102: Situational Awareness II
+3026103: Situational Awareness III
+3026104: Situational Awareness IV
+3026105: Situational Awareness V
+3026106: Situational Awareness VI
 # Toushuu
 1013101: Iai of Decapitation
 1013102: Great Comet Decapitation
