--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -60,6 +60,15 @@
 1028102: Sweets Factory
 1028103: Hopping Tornado
 1028104: Sweets Factory+
+2028101: A Pinch of Hidden Flavour
+2028102: A Pinch of Hidden Flavour+
+2028103: A Pinch of Hidden Flavour++
+3028101: Inherited Willpower I
+3028102: Inherited Willpower II
+3028103: Inherited Willpower III
+3028104: Inherited Willpower IV
+3028105: Inherited Willpower V
+3028106: Inherited Willpower VI
 # Kouki & Sirius
 1018101: Appeal Chance
 1018102: Special Service
@@ -90,6 +99,15 @@
 1020102: Development Arrest
 1020103: Greatest Operation
 1020104: Development Arrest+
+2020101: Focused Excision
+2020102: Focused Excision+
+2020103: Focused Excision++
+3020101: Threatening Concentration I
+3020102: Threatening Concentration II
+3020103: Threatening Concentration III
+3020104: Threatening Concentration IV
+3020105: Threatening Concentration V
+3020106: Threatening Concentration VI
 # Ryekie
 1004101: Kilobolt Slug
 1004102: Megabolt Crash
@@ -109,6 +127,15 @@
 1009102: Desperado Mind
 1009103: Lightspeed Phoenix
 1009104: Lightspeed Phoenix+
+2009101: Oath of Absolute Rescue
+2009102: Oath of Absolute Rescue+
+2009103: Oath of Absolute Rescue++
+3009101: Indomitable Ranger I
+3009102: Indomitable Ranger II
+3009103: Indomitable Ranger III
+3009104: Indomitable Ranger IV
+3009105: Indomitable Ranger V
+3009106: Indomitable Ranger VI
 # Digram
 1024101: Departure Procedure
 1024102: Energy Replenishing
@@ -167,3 +194,23 @@
 3021104: Angel on The Battlefield IV
 3021105: Angel on The Battlefield V
 3021106: Angel on The Battlefield VI
+# Player
+2999101: Exceptional Good Luck
+2999102: Exceptional Good Luck+
+2999103: Exceptional Good Luck++
+3999101: Unconscious Assist I
+3999102: Unconscious Assist II
+3999103: Unconscious Assist III
+3999104: Unconscious Assist IV
+3999105: Unconscious Assist V
+3999106: Unconscious Assist VI
+# Huckle
+2034101: Former Hero's Experience
+2034102: Former Hero's Experience+
+2034103: Former Hero's Experience++
+3034101: Leader's Duty I
+3034102: Leader's Duty II
+3034103: Leader's Duty III
+3034104: Leader's Duty IV
+3034105: Leader's Duty V
+3034106: Leader's Duty VI
