--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -214,3 +214,17 @@
 3034104: Leader's Duty IV
 3034105: Leader's Duty V
 3034106: Leader's Duty VI
+# Hitomi
+2019101: Song of Burning pride
+2019102: Song of Burning pride+
+2019103: Song of Burning pride++
+3019101: Call & ResponseⅠ
+3019102: Call & ResponseⅡ
+3019103: Call & ResponseⅢ
+3019104: Call & ResponseⅣ
+3019105: Call & ResponseⅤ
+3019106: Call & ResponseⅥ
+1019101: INTENSE♡OFFENCELOVEGIRL
+1019102: I AI EYESIGHT
+1019103: LOVE ME☆HITO-MIー!
+1019104: I AI EYESIGHT+
