--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -155,6 +155,9 @@
 1008102: Liquiesta Sport
 1008103: Manguera de Aquario
 1008104: Spalare Aqua+
+2008101: Payment sparks
+2009102: Payment sparks+
+2009103: Payment sparks++
 3008101: High-Temperature Constitution I
 3008102: High-Temperature Constitution II
 3008103: High-Temperature Constitution III
@@ -228,3 +231,17 @@
 1019102: I AI EYESIGHT
 1019103: LOVE ME☆HITO-MIー!
 1019104: I AI EYESIGHT+
+#Isaribi
+1022101: The Method of Pole Fishing
+1022102: Homing Cast Net
+1022103: Isaribi-style explosive fishing method
+1022104: Isaribi-style explosive fishing method+
+2022101: Drive Hunting
+2022102: Drive Hunting+
+2022103: Drive Hunting++
+3022101: Brawl-loving FishermanⅠ
+3022102: Brawl-loving FishermanⅡ
+3022102: Brawl-loving FishermanⅢ
+3022102: Brawl-loving FishermanⅣ
+3022102: Brawl-loving FishermanⅤ
+3022102: Brawl-loving FishermanⅥ
