--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -79,6 +79,15 @@
 1014102: Survivor Soul
 1014103: Ruins Salvage
 1014104: Survivor Soul+
+2014101: Heart of a Tough Guy
+2014102: Heart of a Tough Guy+
+2014103: Heart of a Tough Guy++
+3014101: Brawny AdventurerⅠ
+3014101: Brawny AdventurerⅡ	
+3014101: Brawny AdventurerⅢ
+3014101: Brawny AdventurerⅣ
+3014101: Brawny AdventurerⅤ
+3014101: Brawny AdventurerⅥ
 # Narihito
 1029101: Millenium Feast
 1029102: Full-range Smasher
