--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1,12 +1,12 @@
 # Keep this sorted by skill id
 # Akashi Tamamura
-1001101: Burning White Ball
-1001102: Fighting Spirit of the Ball Child
+1001101: Burning Baseball
+1001102: Fighting Spirit of a Baseball Player
 1001103: Bailie
-1001104: Fighting Spirit of the Ball Child+
-2001101: Singular Focus
-2001102: Singular Focus+
-2001103: Singular Focus++
+1001104: Fighting Spirit of a Baseball Player+
+2001101: Giving Your All Into the First Ball
+2001102: Giving Your All Into the First Ball+
+2001103: Giving Your All Into the First Ball++
 3001101: Competitive Spirit I
 3001102: Competitive Spirit II
 3001103: Competitive Spirit III
@@ -230,12 +230,12 @@
 2019101: Song of Burning pride
 2019102: Song of Burning pride+
 2019103: Song of Burning pride++
-3019101: Call & ResponseⅠ
-3019102: Call & ResponseⅡ
-3019103: Call & ResponseⅢ
-3019104: Call & ResponseⅣ
-3019105: Call & ResponseⅤ
-3019106: Call & ResponseⅥ
+3019101: Call & Response Ⅰ
+3019102: Call & Response Ⅱ
+3019103: Call & Response Ⅲ
+3019104: Call & Response Ⅳ
+3019105: Call & Response Ⅴ
+3019106: Call & Response Ⅵ
 1019101: INTENSE♡OFFENCELOVEGIRL
 1019102: I AI EYESIGHT
 1019103: LOVE ME☆HITO-MIー!
@@ -248,9 +248,9 @@
 2022101: Drive Hunting
 2022102: Drive Hunting+
 2022103: Drive Hunting++
-3022101: Brawl-loving FishermanⅠ
-3022102: Brawl-loving FishermanⅡ
-3022102: Brawl-loving FishermanⅢ
-3022102: Brawl-loving FishermanⅣ
-3022102: Brawl-loving FishermanⅤ
-3022102: Brawl-loving FishermanⅥ
+3022101: Brawl-loving Fisherman Ⅰ
+3022102: Brawl-loving Fisherman Ⅱ
+3022102: Brawl-loving Fisherman Ⅲ
+3022102: Brawl-loving Fisherman Ⅳ
+3022102: Brawl-loving Fisherman Ⅴ
+3022102: Brawl-loving Fisherman Ⅵ
