--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -2,7 +2,7 @@
 # Akashi Tamamura
 1001101: Burning Baseball
 1001102: Fighting Spirit of a Baseball Player
-1001103: Bailie
+1001103: One-hundred Violent Strikes
 1001104: Fighting Spirit of a Baseball Player+
 2001101: Giving Your All Into the First Ball
 2001102: Giving Your All Into the First Ball+
@@ -188,10 +188,10 @@
 3026105: Situational Awareness V
 3026106: Situational Awareness VI
 # Toushuu
-1013101: Iai of Decapitation
-1013102: Great Comet Decapitation
-1013103: Lion Warrior Sword Dance
-1013104: Iai of Decapitation+
+1013101: Art of Decapitation
+1013102: Great Comet Slash
+1013103: Lion Warrior's Sword Dance
+1013104: Art of Decapitation+
 # Loren
 1021101: Sorry If This Hurts
 1021102: I'll Treat You now
