--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -190,8 +190,17 @@
 # Toushuu
 1013101: Art of Decapitation
 1013102: Great Comet Slash
-1013103: Lion Warrior's Sword Dance
+1013103: Sword Dance of the Lion Warrior
 1013104: Art of Decapitation+
+2013101: Righteous Aid
+2013102: Righteous Aid+
+2013103: Righteous Aid++
+3013101: Warrior's Insight Ⅰ
+3013101: Warrior's Insight Ⅱ
+3013101: Warrior's Insight Ⅲ
+3013101: Warrior's Insight Ⅳ
+3013101: Warrior's Insight Ⅴ
+3013101: Warrior's Insight Ⅵ
 # Loren
 1021101: Sorry If This Hurts
 1021102: I'll Treat You now
