--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -89,20 +89,44 @@
 3014101: Brawny AdventurerⅤ
 3014101: Brawny AdventurerⅥ
 # Narihito
-1029101: Millenium Feast
+1029101: Millenium Fist
 1029102: Full-range Smasher
 1029103: Memorial Heroes
-1029104: Millenium Feast+
+1029104: Millenium Fist+
+3029101: Today's Highlight Ⅰ
+3029101: Today's Highlight Ⅱ
+3029101: Today's Highlight Ⅲ
+3029101: Today's Highlight Ⅳ
+3029101: Today's Highlight Ⅴ
+3029101: Today's Highlight Ⅵ
 # Polaris Mask
 1015101: Glittering Stars Back-Breaker
 1015102: Mic Performance
 1015103: Polaris Buster!! 
 1015104: Polaris Buster!!+
+2015101: Two Platon
+2015102: Two Platon+
+2015103: Two Platon++
+3015101: Warrior Fascinated by Adversity Ⅰ
+3015101: Warrior Fascinated by Adversity Ⅱ
+3015101: Warrior Fascinated by Adversity Ⅲ
+3015101: Warrior Fascinated by Adversity Ⅳ
+3015101: Warrior Fascinated by Adversity Ⅴ
+3015101: Warrior Fascinated by Adversity Ⅵ
 # Procy
 1032101: Money is Time
 1032102: Gold Rush Hour
 1032103: Big Hammer Cornucopia
 1032104: Big Hammer Cornucopia+
+2032101: Veteran's Ostentation
+2032102: Veteran's Ostentation+
+2032103: Veteran's Ostentation++
+3032101: Money monger Ⅰ
+3032101: Money monger Ⅱ
+3032101: Money monger Ⅲ
+3032101: Money monger Ⅳ
+3032101: Money monger Ⅴ
+3032101: Money monger Ⅵ
 # Rakta
 1020101: Focus Remover
 1020102: Development Arrest
