--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -273,7 +273,7 @@
 1019102: I AI EYESIGHT
 1019103: LOVE ME☆HITO-MIー!
 1019104: I AI EYESIGHT+
-#Isaribi
+# Isaribi
 1022101: The Method of Pole Fishing
 1022102: Homing Cast Net
 1022103: Isaribi-style explosive fishing method
@@ -287,3 +287,17 @@
 3022104: Brawl-loving Fisherman Ⅳ
 3022105: Brawl-loving Fisherman Ⅴ
 3022106: Brawl-loving Fisherman Ⅵ
+# Sui
+1003101: Suit frogging
+1003102: Body sewing
+1003103: Eguille de Salou
+1003104: Body sewing+
+2003101: Unraveling of Knitting Thread
+2003102: Unraveling of Knitting Thread+
+2003103: Unraveling of Knitting Thread++
+3003101: Designer's inspiration Ⅰ
+3003102: Designer's inspiration Ⅱ
+3003103: Designer's inspiration Ⅲ
+3003104: Designer's inspiration Ⅳ
+3003105: Designer's inspiration Ⅴ
+3003106: Designer's inspiration Ⅵ
