--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -301,3 +301,11 @@
 3003104: Designer's inspiration Ⅳ
 3003105: Designer's inspiration Ⅴ
 3003106: Designer's inspiration Ⅵ
+# Shouen
+1012101: Penmanship's Stroke
+1012102: Enduring Mark
+1012103: Ninety-nine Ink Marks
+1012104: Ninety-nine Ink Marks+
+2012101: Offensive Mark
+2012102: Offensive Mark+
+2012103: Offensive Mark++
