--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -58,7 +58,7 @@
 # Kirsch
 1028101: Merengue Making
 1028102: Sweets Factory
-1028103: Hopping Tornado
+1028103: Whipping Tornado
 1028104: Sweets Factory+
 2028101: A Pinch of Hidden Flavour
 2028102: A Pinch of Hidden Flavour+
