--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -309,3 +309,9 @@
 2012101: Offensive Mark
 2012102: Offensive Mark+
 2012103: Offensive Mark++
+3012101: Clear and Serene Heart I
+3012102: Clear and Serene Heart II
+3012103: Clear and Serene Heart III
+3012104: Clear and Serene Heart IV
+3012105: Clear and Serene Heart V
+3012106: Clear and Serene Heart VI
