Update SkillNameTranslation.yml (#36)
Co-authored-by: rongjie-alter <71772241+rongjie-alter@users.noreply.github.com>

--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -74,6 +74,15 @@
 1018102: Special Service
 1018103: Prime-time Emperor
 1018104: Special Service+
+2018101: Superstar's Entrance
+2018102: Superstar's Entrance+
+2018103: Superstar's Entrance++
+3018101: Killer Content I
+3018101: Killer Content II
+3018101: Killer Content III
+3018101: Killer Content IV
+3018101: Killer Content V
+3018101: Killer Content VI
 # Marfik
 1014101: Hunting Spirit
 1014102: Survivor Soul
@@ -315,3 +324,17 @@
 3012104: Clear and Serene Heart IV
 3012105: Clear and Serene Heart V
 3012106: Clear and Serene Heart VI
+# Kyoichi
+1010101: Teacher's Fist
+1010102: Homeroom Leadership
+1010103: Strategic Education 180°
+1010104: Strategic Education 180°+
+2010101: Grade Improvement
+2010102: Grade Improvement+
+2010103: Grade Improvement++
+3010101: Intensive Course I
+3010102: Intensive Course II
+3010103: Intensive Course III
+3010104: Intensive Course IV
+3010105: Intensive Course V
+3010106: Intensive Course VI
