--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -140,7 +140,7 @@
 1020101: Focus Remover
 1020102: Development Arrest
 1020103: Greatest Operation
-1020104: Development Arrest+
+1020104: Greatest Operation+
 2020101: Focused Excision
 2020102: Focused Excision+
 2020103: Focused Excision++
