Implement chara page with icons

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = assets/img/fg
 	url = https://github.com/liveahero-wiki/fg
 	branch = master
+[submodule "assets/img/icon"]
+	path = assets/img/icon
+	url = https://github.com/liveahero-wiki/icon/
+	branch = master
