--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -144,12 +144,12 @@
 2020101: Focused Excision
 2020102: Focused Excision+
 2020103: Focused Excision++
-3020101: Threatening Concentration I
-3020102: Threatening Concentration II
-3020103: Threatening Concentration III
-3020104: Threatening Concentration IV
-3020105: Threatening Concentration V
-3020106: Threatening Concentration VI
+3020101: Threat of Concentration I
+3020102: Threat of Concentration II
+3020103: Threat of Concentration III
+3020104: Threat of Concentration IV
+3020105: Threat of Concentration V
+3020106: Threat of Concentration VI
 # Ryekie
 1004101: Kilobolt Slug
 1004102: Megabolt Crash
