--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -338,3 +338,32 @@
 3010104: Intensive Course IV
 3010105: Intensive Course V
 3010106: Intensive Course VI
+# Gomeisa
+1033101: Dance of High Winds
+1033102: Dance of the Sun
+1033103: Dansaque Traepas 
+1033104: Dansaque Traepas+
+2033101: Blessing of Greenery
+2033102: Blessing of Greenery+
+2033103: Blessing of Greenery++
+3033101: Photosynthetic Body I
+3033102: Photosynthetic Body II
+3033103: Photosynthetic Body III
+3033104: Photosynthetic Body IV
+3033105: Photosynthetic Body V
+3033106: Photosynthetic Body VI
+# Barrel
+1007101: Sharpshooting!
+1007102: Fire Away!
+1007103: BANG&BANG&BANG!!
+1007104: Fire Away!+
+2007101: Providing Covering Fire
+2007102: Providing Covering Fire+
+2007103: Providing Covering Fire++
+3007101: Next Round Loaded I
+3007102: Next Round Loaded II
+3007103: Next Round Loaded III
+3007104: Next Round Loaded IV
+3007105: Next Round Loaded V
+3007106: Next Round Loaded VI
+
