Tweak main page content

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ url: https://liveahero-wiki.github.io
 github_edit: https://github.com/liveahero-wiki/liveahero-wiki.github.io/edit/master
 permalink: /news/:year/:month/:title/
 timezone: Asia/Tokyo
-date_format: "%-d %B %Y %R JST"
+date_format: "%-d %b %Y %R JST"
 markdown: kramdown
 #kramdown:
 #  parse_block_html: true
