Fix unreadable text style

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ permalink: /news/:year/:month/:title/
 timezone: Asia/Tokyo
 date_format: "%-d %b %Y %R JST"
 markdown: kramdown
+excerpt_separator: "<!--more-->"
 #kramdown:
 #  parse_block_html: true
 sass:
