--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -102,6 +102,9 @@
 1029102: Full-range Smasher
 1029103: Memorial Heroes
 1029104: Millenium Fist+
+2029101: Special Feature
+2029102: Special Feature+
+2029103: Special Feature++
 3029101: Today's Highlight Ⅰ
 3029102: Today's Highlight Ⅱ
 3029103: Today's Highlight Ⅲ
