--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -302,7 +302,7 @@
 # Sui
 1003101: Suit frogging
 1003102: Body sewing
-1003103: Eguille de Salou
+1003103: Aiguille du Salut
 1003104: Body sewing+
 2003101: Unraveling of Knitting Thread
 2003102: Unraveling of Knitting Thread+
