--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -29,7 +29,7 @@ jobs:
         git init
         git config --local user.email lah-wiki-bot
         git config --local user.name noreply@github.com
-        git remote add origin https://$MY_SECRET@github.com/$GITHUB_REPOSITORY.git
+        git remote add origin https://${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git
         git checkout -b gh-pages
         git add --all
         git commit -m "Deploy to Github pages"
