--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -27,8 +27,8 @@ jobs:
         cd _site
         touch .nojekyll
         git init
-        git config --local user.email lah-wiki-bot
-        git config --local user.name noreply@github.com
+        git config --local user.email noreply@github.com
+        git config --local user.name lah-wiki-bot
         git remote add origin https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git
         git checkout -b gh-pages
         git add --all
