Revise Kyoichi Skill name [ci skip]

--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -330,8 +330,8 @@
 # Kyoichi
 1010101: Teacher's Fist
 1010102: Homeroom Leadership
-1010103: Strategic Education 180°
-1010104: Strategic Education 180°+
+1010103: Primary Education 180°
+1010104: Primary Education 180°+
 2010101: Grade Improvement
 2010102: Grade Improvement+
 2010103: Grade Improvement++
