Implement client side atlas stitching

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ defaults:
       type: "charas"
     values:
       unreleased: false
+      additional_scripts: ["/assets/atlas.min.js"]
   - scope:
       type: "events"
     values:
@@ -50,5 +51,6 @@ collections:
 
 exclude:
   - "*.py"
+  - "assets/atlas.js"
   - readme.md
   - CONTRIBUTING.md
