--- a/.github/workflows/update-masterdata.yml
+++ b/.github/workflows/update-masterdata.yml
@@ -2,7 +2,6 @@ name: Auto Masterdata update
 on:
   workflow_dispatch: ~
   schedule:
-    # At minute 0 and 30.
     - cron: '0 * * * *'
 jobs:
   build:
@@ -39,3 +38,8 @@ jobs:
           else
             echo "Master data is already up to date."
           fi
+      - name: Upload properties files
+        uses: actions/upload-artifact@v2
+        with:
+          name: JP Properties
+          path: _data/processed/Japanese.properties
