--- a/_data/wiki/Affiliation.yml
+++ b/_data/wiki/Affiliation.yml
@@ -1,7 +1,7 @@
 "パラレルフライト":
   en: "Parallel Flight"
 "地球圏連合ヒーロー派遣隊":
-  en: "Earth Sphere Alliance Hero Detachment"
+  en: "United Earth Hero Dispatch"
 "ヒロイック・エデュケーターズ":
   en: "Heroic Educators"
 "ギャラクシー・アスリーツ":
