--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -317,7 +317,7 @@
 1012101: Penmanship's Stroke
 1012102: Enduring Mark
 1012103: Ninety-nine Ink Marks
-1012104: Ninety-nine Ink Marks+
+1012104: Enduring Mark+
 2012101: Offensive Mark
 2012102: Offensive Mark+
 2012103: Offensive Mark++
