--- a/_data/wiki/Affiliation.yml
+++ b/_data/wiki/Affiliation.yml
@@ -20,5 +20,7 @@
   en: "Gourmet Fighters"
 "ブロードキャスターズ":
   en: "Broadcasters"
+"クリエイティブ・ブレイン ":
+  en: "Creative Brains"
 "無所属":
   en: "Unaffiliated"
