--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -158,6 +158,10 @@
 1004102: Megabolt Crash
 1004103: Gigabolt Breaker
 1004104: Gigabolt Breaker+
+1004201: Electro Slash
+1004202: Discharge Banquet
+1004203: Gigabolt Breaker
+1004204: Gigabolt Breaker+
 2004101: Thunderbolt of Justice
 2004102: Thunderbolt of Justice+
 2004103: Thunderbolt of Justice++
@@ -369,4 +373,32 @@
 3007104: Next Round Loaded IV
 3007105: Next Round Loaded V
 3007106: Next Round Loaded VI
+# Nessen
+1051101: Source Style Blade
+1051102: Super-heating Flash
+1051103: Hot Spring Paradise Slash
+1051104: Hot Spring Paradise Slash+
+2051101: Water Splashing Cut
+2051102: Water Splashing Cut+
+2051103: Water Splashing Cut++
+3051101: Blessings of Hot Baths I
+3051102: Blessings of Hot Baths II
+3051103: Blessings of Hot Baths III
+3051104: Blessings of Hot Baths IV
+3051105: Blessings of Hot Baths V
+3051106: Blessings of Hot Baths VI
+# Subaru
+1027101: Fortune Has Abandoned You
+1027102: The World In Constant Change
+1027103: Writings Of Human Realm
+1027104: Fortune Has Abandoned You+
+2027101: Flow Of Losing Heart
+2027102: Flow Of Losing Heart+
+2027103: Flow Of Losing Heart++
+3027101: Action Rewrite I
+3027102: Action Rewrite II
+3027103: Action Rewrite III
+3027104: Action Rewrite IV
+3027105: Action Rewrite V
+3027106: Action Rewrite VI
 
