--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -401,4 +401,17 @@
 3027104: Action Rewrite IV
 3027105: Action Rewrite V
 3027106: Action Rewrite VI
+# Wood Wolfman
+1043101: Slash
+1043102: Poison Stab
+1043103: Wood Wolf's Spirit
+2043101: Backing Slash
+2043102: Backing Slash+
+2043103: Backing Slash++
+3043101: Wood Wolf's Encouragement I
+3043102: Wood Wolf's Encouragement II
+3043103: Wood Wolf's Encouragement III
+3043104: Wood Wolf's Encouragement IV
+3043105: Wood Wolf's Encouragement V
+3043106: Wood Wolf's Encouragement VI
 
