--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -322,6 +322,10 @@
 1012102: Enduring Mark
 1012103: Ninety-nine Ink Marks
 1012104: Enduring Mark+
+1012201: Calligraphy Technique [Hidden]
+1012202: Calligraphy Technique [Secret]
+1012203: Ninety-nine Ink Marks
+1012204: Ninety-nine Ink Marks+
 2012101: Offensive Mark
 2012102: Offensive Mark+
 2012103: Offensive Mark++
@@ -336,6 +340,10 @@
 1010102: Homeroom Leadership
 1010103: Primary Education 180°
 1010104: Primary Education 180°+
+1010201: Ambush Order
+1010202: Espionage
+1010203: Primary Education 180°
+1010204: Espionage+
 2010101: Grade Improvement
 2010102: Grade Improvement+
 2010103: Grade Improvement++
@@ -414,4 +422,33 @@
 3043104: Wood Wolf's Encouragement IV
 3043105: Wood Wolf's Encouragement V
 3043106: Wood Wolf's Encouragement VI
+# Flamier
+1011101: Lovely Flame
+1011102: Crazy for Bombs
+1011103: Happy ♡ Flower Time
+1011104: Happy ♡ Flower Time+
+2011101: Poison Bomb
+2011102: Poison Bomb+
+2011103: Poison Bomb++
+3011101: Fire Hazard I
+3011102: Fire Hazard II
+3011103: Fire Hazard III
+3011104: Fire Hazard IV
+3011105: Fire Hazard V
+3011106: Fire Hazard VI
+# Hisaki
+1053101: Stealth Attack
+1053102: Energy Shield
+1053103: Opus Creation
+1053104: Opus Creation+
+2053101: Armor Maintenance
+2053102: Armor Maintenance+
+2053103: Armor Maintenance++
+3053101: Prototype Electromagnetic Shield I
+3053102: Prototype Electromagnetic Shield II
+3053103: Prototype Electromagnetic Shield III
+3053104: Prototype Electromagnetic Shield IV
+3053105: Prototype Electromagnetic Shield V
+3053106: Prototype Electromagnetic Shield VI
+
 
