--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -450,5 +450,18 @@
 3053104: Prototype Electromagnetic Shield IV
 3053105: Prototype Electromagnetic Shield V
 3053106: Prototype Electromagnetic Shield VI
-
+# Gammei
+1006101: Public Order Enforcement
+1006102: Detective Inquiry
+1006103: Towards The Star
+1006104: Detective Inquiry+
+2006101: On-site Learned Hojojutsu
+2006102: On-site Learned Hojojutsu+
+2006103: On-site Learned Hojojutsu++
+3006101: Cost of Frugality I
+3006102: Cost of Frugality II
+3006103: Cost of Frugality III
+3006104: Cost of Frugality IV
+3006105: Cost of Frugality V
+3006106: Cost of Frugality VI
 
