--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -464,4 +464,32 @@
 3006104: Cost of Frugality IV
 3006105: Cost of Frugality V
 3006106: Cost of Frugality VI
+# Andrew
+1025101: Humans Decoy
+1025102: Passive Jammer
+1025103: Geminis Decide
+1025104: Passive Jammer+
+2025101: Protective Wall Expansion
+2025102: Protective Wall Expansion+
+2025103: Protective Wall Expansion++
+3025101: Shielder's Determination I
+3025102: Shielder's Determination II
+3025103: Shielder's Determination III
+3025104: Shielder's Determination IV
+3025105: Shielder's Determination V
+3025106: Shielder's Determination VI
+# Maculata
+1059101: Fil Dernier  
+1059102: Bon Tailleur
+1059103: Tailleur A Griffes
+1059104: Passive Jammer+
+2059101: Aggressive Stance
+2059102: Aggressive Stance+
+2059103: Aggressive Stance++
+3059101: Active Temperament I
+3059102: Active Temperament II
+3059103: Active Temperament III
+3059104: Active Temperament IV
+3059105: Active Temperament V
+3059106: Active Temperament VI
 
