--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -482,7 +482,7 @@
 1059101: Fil Dernier  
 1059102: Bon Tailleur
 1059103: Tailleur A Griffes
-1059104: Passive Jammer+
+1059104: Fil Dernier+
 2059101: Aggressive Stance
 2059102: Aggressive Stance+
 2059103: Aggressive Stance++
