--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -492,4 +492,16 @@
 3059104: Active Temperament IV
 3059105: Active Temperament V
 3059106: Active Temperament VI
-
+# Shadow Wolfman
+1045101: Slash
+1045102: Poison Stab
+1045103: Shadow Wolf's Spirit
+2045101: Backing Slash
+2045102: Backing Slash+
+2045103: Backing Slash++
+3043101: Shadow Wolf's Encouragement I
+3045102: Shadow Wolf's Encouragement II
+3045103: Shadow Wolf's Encouragement III
+3045104: Shadow Wolf's Encouragement IV
+3045105: Shadow Wolf's Encouragement V
+3045106: Shadow Wolf's Encouragement VI
