Implement timed_bomb

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ defaults:
       type: "events"
     values:
       layout: event
+      timed_bomb: false
   - scope:
       type: "main_quests"
     values:
