Change Maculata S2 name
Oops

--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -480,7 +480,7 @@
 3025106: Shielder's Determination VI
 # Maculata
 1059101: Fil Dernier  
-1059102: Bon Tailleur
+1059102: Bon Taille
 1059103: Tailleur A Griffes
 1059104: Fil Dernier+
 2059101: Aggressive Stance
