--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -200,10 +200,10 @@
 3024105: Strategy Modification V
 3024106: Strategy Modification VI
 # Furlong
-1008101: Spalare Aqua
-1008102: Liquiesta Sport
+1008101: Sparare Acqua
+1008102: Richiesta Supporto
 1008103: Manguera de Aquario
-1008104: Spalare Aqua+
+1008104: Sparare Acqua+
 2008101: Payment sparks
 2008102: Payment sparks+
 2008103: Payment sparks++
