--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -202,7 +202,7 @@
 # Furlong
 1008101: Sparare Acqua
 1008102: Richiesta Supporto
-1008103: Manguera de Aquario
+1008103: Manguera de Acquario
 1008104: Sparare Acqua+
 2008101: Payment sparks
 2008102: Payment sparks+
@@ -215,9 +215,9 @@
 3008106: High-Temperature Constitution VI
 # Alchiba 
 1026101: Pista Epidiosi
-1026102: Vasanisterio
-1026103: Mavro Aspiro
-1026104: Vasanisterio+
+1026102: Vasanistírio
+1026103: Mávro Áspro
+1026104: Vasanistírio+
 2026101: Behavioral Inference
 2026102: Behavioral Inference+
 2026103: Behavioral Inference++
