--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -88,6 +88,10 @@
 1014102: Survivor Soul
 1014103: Ruins Salvage
 1014104: Survivor Soul+
+1014201: History Hunting
+1014202: Explorer's Luck
+1014203: Ruins Salvage
+1014204: Ruins Salvage+
 2014101: Heart of a Tough Guy
 2014102: Heart of a Tough Guy+
 2014103: Heart of a Tough Guy++
@@ -505,3 +509,32 @@
 3045104: Shadow Wolf's Encouragement IV
 3045105: Shadow Wolf's Encouragement V
 3045106: Shadow Wolf's Encouragement VI
+# Rutilix
+1061101: Sheening Svärd
+1061102: Acceler Slash
+1061103: Edabd Haieriden
+1061104: Edabd Haieriden+
+2061101: Reckless Assault
+2061102: Reckless Assault+
+2061103: Reckless Assault++
+3061101: Potato Knight's Willpower I
+3061102: Potato Knight's Willpower II
+3061103: Potato Knight's Willpower III
+3061104: Potato Knight's Willpower IV
+3061105: Potato Knight's Willpower V
+3061106: Potato Knight's Willpower VI
+# Alphecca
+1062101: Skruostre
+1062102: Kongens Ansva
+1062103: Helig Franmerai
+1062104: Kongens Ansva+
+2062101: White Knight's Visit
+2062102: White Knight's Visit+
+2062103: White Knight's Visit++
+3062101: King Knight's Ambition I
+3062102: King Knight's Ambition II
+3062103: King Knight's Ambition III
+3062104: King Knight's Ambition IV
+3062105: King Knight's Ambition V
+3062106: King Knight's Ambition VI
+
