--- a/_data/wiki/VoiceActor.yml
+++ b/_data/wiki/VoiceActor.yml
@@ -33,7 +33,7 @@
 "中谷一博":
   en: "Kazuhiro Nakaya"
 "成田剣":
-  en: "Ken Narita"
+  en: "Narita Ken"
 "伊瀬茉莉也":
   en: "Mariya Ise"
 "稲田徹":
@@ -52,3 +52,7 @@
   en: "Ryoutarou Akiayu"
 "ならはしみき":
   en: "Miki Narahashi"
+"福山潤":
+  en: "Jun Fukuyama"
+"有元勇輝":
+  en: "Yuuki Arimoto"
